--- a/HashMapPracticeQuestions.ipynb
+++ b/HashMapPracticeQuestions.ipynb
@@ -216,10 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "bf44f3e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def contains_duplicate(nums):\n",
     "    \"\"\"\n",
@@ -234,7 +245,59 @@
     "        if i in dic:\n",
     "            return True\n",
     "        dic[i]=1\n",
-    "    return False\n"
+    "    return False\n",
+    "\n",
+    "nums = [1, 1, 1, 3, 3, 4, 3, 2, 4, 2]\n",
+    "contains_duplicate(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b20ecc83",
+   "metadata": {},
+   "source": [
+    "## Greatest Number Product\n",
+    "**Description:**\n",
+    "\n",
+    "You are given an array ARR of integers. Your task is to find the greatest number in the array such that this number is also equal to the product of two different elements from the same array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c14038c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greatest_product_equal_to_element(arr):\n",
+    "    \"\"\"\n",
+    "    Function to find the greatest number in the array that is equal to the product of two different elements.\n",
+    "    \n",
+    "    :param arr: List[int] -> The input list of integers\n",
+    "    :return: int -> The greatest number in the array that is equal to the product of two different elements\n",
+    "    \"\"\"\n",
+    "    # TODO: Implement the logic using a hashmap approach\n",
+    "    arr_set=set(arr)\n",
+    "    max_product=-1\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(len(arr)):\n",
+    "            if i != j:\n",
+    "                product=arr[i] * arr[j]\n",
+    "                if product in arr_set:\n",
+    "                    max_product=max(max_product,product)\n",
+    "    return max_product\n",
+    "        \n",
+    "ARR = [1, 2, 3, 6, 12]\n",
+    "ans=greatest_product_equal_to_element(ARR)\n",
+    "print(ans)"
    ]
   }
  ],
